refactor: Refactorizando Dashboard y documentando sus endpoints Extrayendo lógica a DashboardService y documentando los métodos de DashboardController
